--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>LOPE NYA BUAT KAMU DITEKAN YA</span>
+      <span>Klik love nya</span>
     </div>
 
     <script>
-      ucapan = `makasih udah mau buka ya cantik, maaf kalo aku ada salah sama kamu`;
+      ucapan = ``;
       musik = ``;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
-      dariseseorang(ucapan, musik, nomorWhatsapp, idTelegram);
+      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
